--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -78,15 +78,11 @@ $foundation-palette: (
 $light-gray: #f2f2f2;
 $medium-gray: #c2c2c2;
 $dark-gray: #8a8a8a;
-$black: #000000;
+$black: #231f20;
 $white: #ffffff;
-$red: #ed2524;
-$teal: #70B3B7;
-$header-blue: #0D2132;
-$navy: #17255F;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: abril-display, Georgia, serif;
+$body-font-family: Montserrat, Helvetica, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
