--- a/assets/styles/scss/_footer.scss
+++ b/assets/styles/scss/_footer.scss
@@ -1,136 +1,106 @@
-.work-with-us {
-	padding-top: 5.2em;
-	padding-bottom: 4.6em;
-	background-size: cover;
-	    
-	h2,
-	p {
-		color: $white;
-	}
-	
-	h2 {
-		text-transform: uppercase;
-		font-weight: 500;
-	}
-	
-	.heading-underline {
-		margin-bottom: 0.8em;
-	}
-	
-	p {
-		font-size: rem-calc(16);
-		line-height: 1.4375;
-	}
-	
-}
-
 .footer {
-	background-color: $light-gray;
 	clear: both;
-		
-	.inner-footer {
-		
-		.content-wrap {
-			margin-left: auto;
-			margin-right: auto;
-		}
-		
-		.top {
-			border-bottom: 1px solid $medium-gray;
-			padding-top: 2.55em;
-			padding-bottom: 3.4em;
-			
-			p.address-heading {
-				font-size: rem-calc(14px);
-				color: #3b444f;
-			    margin-bottom: 0;
-				padding-bottom: 0.1em;
 
-			}
+	.pre-footer {
+		padding-top: 6.6em;
 		
-			.menu {
+		@include breakpoint(medium) {
+			padding-top: 10.6em;
+		}
 				
-				li {
-					
-				&.footer-logo-wrap img {
-					width: 100%;
-					max-width: 95px;
-				}
-				
-					a {
-						padding: 0;
-					}
-				
-				&.footer-contact {
-					span {
-						display: inline-block;
-						font-size: rem-calc(12px);
-						color: #8d9197;
-						margin-bottom: 2px;
-						
-					&.address {
-						line-height: 1.5;
-						margin-top: -.09em;
-					}
-						
-					&:last-child {
-						margin-bottom: 0;
-					}
-						
-					}
-					
-					a.email {
-						font-weight: bold;
-					}
-					
-				}
-				
-				}	
+		.bar {
+			height: 9px;
+			width: 100%;
+			max-width: 305px;
+			margin: auto;
+		}
+		
+		h2 {
+			text-transform: uppercase;
+			font-size: rem-calc(40);
+			margin-top: 1.3em;
+			margin-bottom: 1.25em;
 			
-			&.footer-social {
-				padding-top: 2em;
-				margin-bottom: 2em;
-				
-				@include breakpoint (medium) {
-					padding-top: 0;
-				}
-				
-				li {
-					a {
-						padding: 0;
-						width: 45px;
-						height: 45px;
-						border: 1px solid $black;
-						border-radius: 100%;
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						
-						img {
-							max-width: 20px;
-						}		
-						
-					}
-				}
-			}
-			
-			}
-			
-			li.flag {
-				
+			@include breakpoint(medium) {
+				font-size: rem-calc(60);
 			}
 			
 		}
 		
-		.bottom {
-			
-			p {
-				font-size: rem-calc(12px);
-				color: #8d9197;
-			}
-			
-		}
+	}	
 	
+	.inner-footer {
+		padding-top: 6.2em;
+		background-color: $black;
+		color: $white;
+		
+		ul.footer-logo {
+			padding-bottom: 1.85em;
+		}
+		
+		ul.social-links,
+		ul#footer-links {
+			justify-content: flex-end;			
+		}
+		
+		ul.social-links {
+			padding-bottom: 1.55em;
+			
+			li {
+				font-size: rem-calc(27);
+				width: 49px;
+				height: 50px;
+				background: $white;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				margin-left: 1.28em;
+				
+				a {
+					color: $black;
+				}
+				
+			}
+		}
+		
+		ul#footer-links {
+			padding-bottom: .95em;
+			
+			li {
+				margin-left: 1.6em;
+				padding-bottom: 0.5em;
+				
+				a {
+					text-transform: uppercase;
+					color: $white;
+				}
+				
+			&:not(:first-child) {
+				position: relative;
+				
+				&:before {
+					color: #000;
+					content: "/";
+				    position: absolute;
+				    transform: rotateY(180deg) translateX(19px) translateY(-7px);
+				}
+				
+			}				
+				
+			}			
+		}
+		
+		.address {
+			font-size: rem-calc(17);
+			text-transform: uppercase;
+			padding-bottom: 2.45em;
+		}
+		
+	}
+	
+	.post-footer {
+		padding-top: 0.7em;
+		padding-bottom: 0.8em;
 	}
 	
 }
