--- a/assets/styles/scss/_job-openings.scss
+++ b/assets/styles/scss/_job-openings.scss
@@ -96,6 +96,24 @@
 						
 						h4 {
 							margin-bottom: 1.18em;
+							
+							@media screen and (min-width: 768px) {
+								br {
+									display: none;
+								}
+							}
+							
+							span {
+								
+								img {
+									width: 0.55em;
+								    margin-top: -.2em;
+								    margin-left: 0.1em;
+								}
+								
+								color: $primary-color;
+							}
+							
 						}
 					}					
 				}
