--- a/assets/styles/scss/_fonts.scss
+++ b/assets/styles/scss/_fonts.scss
@@ -1,25 +1,6 @@
 $FontPath: "../fonts/EurostileExt-Bla/";
 
 @font-face {
-  font-family: Whitney Book;
-  src: url("#{$FontPath}/Whitney-Book.otf") format("opentype");
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Whitney Light;
-  src: url("#{$FontPath}/Whitney-Light.otf") format("opentype");
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Whitney Semi;
-  src: url("#{$FontPath}/whitney-semibold.otf") format("opentype");
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Whitney Bold;
-  src: url("#{$FontPath}/whitney-bold.otf") format("opentype");
-  font-style: normal;
+  font-family: 'EurostileExt-Bla';
+  src: url('#{$FontPath}/font.woff2') format('woff2'), url('#{$FontPath}/font.woff') format('woff');
 }
