--- a/assets/styles/scss/_contact.scss
+++ b/assets/styles/scss/_contact.scss
@@ -8,10 +8,115 @@
 		padding-top: 3.7em;
 		
 		p {
-			font-size: rem-calc(60);
+			font-size: 5.5vw;
 			font-family: $header-font-family;
 			text-transform: uppercase;
 			line-height: 1.333;
+			
+			@include breakpoint (medium) {
+				font-size: 5vw;
+			}
+			
+			@include breakpoint (tablet) {
+				font-size: 5vw;
+			}
+			
+			@include breakpoint (xlarge) {
+				font-size: 60px;
+			}
+			
+		}
+	}
+	
+	.form-wrap {
+		padding-top: 4.2em;
+		padding-bottom: 4.9em;
+		
+		@include breakpoint (medium) {
+			padding-top: 11.2em;
+			padding-bottom: 6.9em;			
+		}
+		
+		.gform_wrapper {
+			
+			
+			form {
+				width: 100%;
+				
+				.gform_body ul li {
+					margin-bottom: 2.6em;
+					
+					@include breakpoint (medium) {
+						margin-bottom: 4.6em;
+					}
+					
+				&:last-child {
+					margin-bottom: 1.15em;
+					
+					@include breakpoint (medium) {
+						margin-bottom: 3.15em;
+					}
+				}
+					
+					.gfield_label {
+						font-family: $header-font-family;
+						font-size: rem-calc(18);
+						text-transform: uppercase;
+						
+						@include breakpoint (medium) {
+							font-size: rem-calc(35);
+						}
+						
+						span.gfield_required {
+							display: none;
+						}
+						
+					}
+					
+					.ginput_container {
+						margin-top: .8em;
+						
+						input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]),
+						textarea {
+						    width: 100%;
+						    padding: 0 .75em;
+						    margin-bottom: 0;
+						    background: #f4f4f4;
+						    box-shadow: inset 0 0 0 0 rgba(0,0,0,0);
+						    font-size: rem-calc(16);
+						    border: 0;
+						    
+						    @include breakpoint (medium) {
+							    font-size: rem-calc(25);
+						    }
+						    
+					    }
+					    
+					    input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
+						    height: 80px;
+						    
+						    @include breakpoint (medium) {
+							    height: 130px;
+						    }
+						    
+					    }
+				    
+				    }
+				    
+				}
+			}
+			
+			.gform_footer {
+				text-align: center;
+				
+				input[type=submit] {
+					font-size: rem-calc(20);
+					text-transform: uppercase;
+					min-height: 61px;
+				}
+					
+			}
+			
 		}
 	}
 	
