--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -7,6 +7,7 @@ all of your Sass files so they can compile into one
 CSS file. 
 
 ******************************************************************/
+@import url("//hello.myfonts.net/count/3c3e07");
 
 // Import local Foundation overrides - Don't link to Bower version as it will be overwritten whenever updated
 @import "settings";
