--- a/assets/styles/scss/_footer.scss
+++ b/assets/styles/scss/_footer.scss
@@ -55,14 +55,14 @@
 				font-size: rem-calc(27);
 				width: 49px;
 				height: 50px;
-				background: $white;
+				background: $black;
 				display: flex;
 				align-items: center;
 				justify-content: center;
 				margin-left: 1.28em;
 				
 				a {
-					color: $black;
+					color: $white;
 				}
 				
 			}
@@ -84,7 +84,7 @@
 				position: relative;
 				
 				&:before {
-					color: #000;
+					color: $white;
 					content: "/";
 				    position: absolute;
 				    transform: rotateY(180deg) translateX(19px) translateY(-7px);
