--- a/assets/styles/scss/_footer.scss
+++ b/assets/styles/scss/_footer.scss
@@ -90,7 +90,11 @@
 				    transform: rotateY(180deg) translateX(19px) translateY(-7px);
 				}
 				
-			}				
+			}
+			
+				ul.sub-menu {
+					display: none;
+				}				
 				
 			}			
 		}
