Global 20% size reduction

--- a/assets/styles/scss/_header.scss
+++ b/assets/styles/scss/_header.scss
@@ -25,10 +25,25 @@ header.header {
 		padding-bottom: 0.6em;
 		
 		@include breakpoint (tablet) {
-			padding-top: 1.55em;
+			padding-top: 1.05em;
 			padding-bottom: 1.05em;
 		}
 		
+	}
+	
+	.top-bar-left {
+		li.logo {
+			img {
+				max-width: 220px;
+				margin-top: 0.25em;
+				
+				@include breakpoint (tablet) {
+					max-width: 260px;
+					margin-top: 0;
+				}
+				
+			}
+		}
 	}
 		
 	.top-bar-right {
@@ -82,7 +97,7 @@ header.header {
 			    margin-top: -0.1em;
 			    
 			    li {
-					font-size: rem-calc(24);
+					font-size: rem-calc(19.2);
 					margin-left: 0.4em;
 					
 				
@@ -94,7 +109,7 @@ header.header {
 			
 					
 				@media screen and (min-width: 440px) {
-					font-size: rem-calc(27);
+					font-size: rem-calc(21.6);
 					margin-left: 0.8em;
 					
 				}
