--- a/assets/styles/scss/_careers.scss
+++ b/assets/styles/scss/_careers.scss
@@ -38,33 +38,33 @@
 						line-height: 1.1666;	
 						
 						@include breakpoint(medium) {
-							font-size: rem-calc(30);
+							font-size: rem-calc(24);
 						}
 						
 						@include breakpoint(tablet) {
-							font-size: rem-calc(22);
+							font-size: rem-calc(17.6);
 						}
 						
 						@include breakpoint(large) {
-							font-size: rem-calc(24);
+							font-size: rem-calc(19.2);
 						}
 
 						@include breakpoint(xlarge) {
-							font-size: rem-calc(30);
+							font-size: rem-calc(24);
 						}
 									
 					}
 					
 					.bar {
-						width: 130px;
-						height: 5px;
-						margin: .25em auto 1.1em;
+						width: 104px;
+						height: 4px;
+						margin: .2em auto .88em;
 						opacity: 0;
 						
 						@include breakpoint(medium) {
-							height: 14px;
-							width: 199px;
-							margin: 1.25em auto 3.1em;
+							height: 11px;
+							width: 159px;
+							margin: 1em auto 2.48em;
 						}
 						
 					}	
@@ -207,18 +207,18 @@
 	section.team {
 		max-width: 1680px;
 		margin: auto;
-		padding-top: 7.35em;
+		padding-top: 5.8em;
 		
 		@include breakpoint(medium) {
-			padding-top: 11.35em;
+			padding-top: 9.08em;
 		}
 		
 		h2 {
 			margin: 0;
-			padding-bottom: 1.98em;
+			padding-bottom: 1.584em;
 			
 			@media screen and (max-width: 400px) {
-				font-size: rem-calc(20);
+				font-size: rem-calc(16);
 			}
 			
 		}
@@ -234,20 +234,20 @@
 				
 			&.it-1,
 			&it-2 {
-				height: 54.762vw;
+				height: 43.80vw;
 				
 				@include breakpoint(max) {
-					height: 902px;
+					height: 722px;
 				}
 				
 			}
 			
 			&.it-3,
 			&it-4 {
-				height: 38.334vw;
+				height: 30.6672vw;
 				
 				@include breakpoint(max) {
-					height: 644px;
+					height: 515px;
 				}
 				
 			}
