--- a/assets/styles/scss/_contact.scss
+++ b/assets/styles/scss/_contact.scss
@@ -8,21 +8,21 @@
 		padding-top: 3.7em;
 		
 		p {
-			font-size: 5.5vw;
+			font-size: 4.4vw;
 			font-family: $header-font-family;
 			text-transform: uppercase;
 			line-height: 1.333;
 			
 			@include breakpoint (medium) {
-				font-size: 4vw;
+				font-size: 3.2vw;
 			}
 			
 			@include breakpoint (tablet) {
-				font-size: 4vw;
+				font-size: 3.2vw;
 			}
 			
 			@include breakpoint (xlarge) {
-				font-size: 40px;
+				font-size: 32px;
 			}
 			
 		}
@@ -35,11 +35,11 @@
 	
 	.form-wrap {
 		padding-top: 0em;
-		padding-bottom: 4.9em;
+		padding-bottom: 3.92em;
 		
 		@include breakpoint (medium) {
-			padding-top: 4em;
-			padding-bottom: 6.9em;			
+			padding-top: 3.2em;
+			padding-bottom: 5.52em;			
 		}
 		
 		.gform_wrapper {
@@ -49,17 +49,17 @@
 				width: 100%;
 				
 				.gform_body ul li {
-					margin-bottom: 1em;
+					margin-bottom: .8em;
 					
 					@include breakpoint (medium) {
-						margin-bottom: 1.5em;
+						margin-bottom: 1.2em;
 					}
 					
 				&:last-child {
-					margin-bottom: 2em;
+					margin-bottom: 1.6em;
 					
 					@include breakpoint (medium) {
-						margin-bottom: 3.15em;
+						margin-bottom: 2.52em;
 					}
 				}
 					
@@ -69,7 +69,7 @@
 						text-transform: uppercase;
 						
 						@include breakpoint (medium) {
-							font-size: rem-calc(22);
+							font-size: rem-calc(16);
 						}
 						
 						span.gfield_required {
@@ -92,16 +92,16 @@
 						    border: 0;
 						    
 						    @include breakpoint (medium) {
-							    font-size: rem-calc(25);
+							    font-size: rem-calc(20);
 						    }
 						    
 					    }
 					    
 					    input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
-						    height: 50px;
+						    height: 40px;
 						    
 						    @include breakpoint (medium) {
-							    height: 70px;
+							    height: 56px;
 						    }
 						    
 					    }
@@ -115,9 +115,9 @@
 				text-align: center;
 				
 				input[type=submit] {
-					font-size: rem-calc(20);
+					font-size: rem-calc(16);
 					text-transform: uppercase;
-					min-height: 61px;
+					min-height: 49px;
 				}
 					
 			}
