--- a/assets/styles/scss/_home.scss
+++ b/assets/styles/scss/_home.scss
@@ -40,28 +40,58 @@
 				height: 100%;
 			
 				h2 {
-					font-size: rem-calc(60);
+					font-size: rem-calc(34);
 					line-height: 1.06;						
 					position: absolute;
-					top: 2.05em;;
+					max-width: 100vw;
+					top: 2.05em;
 					left: 0;
+
+					@include breakpoint(medium) {
+						font-size: rem-calc(32);
+					}
+					
+					@include breakpoint(tablet) {
+						font-size: rem-calc(48);
+					}
+					
 				}
 			
 				.single-slide {
 					height: 100vh;
 					max-height: 100%;
+					overflow: hidden;
+					
+					@include breakpoint(medium) {
+						overflow: visible;
+					}
 					
 					h3 {
 						position: relative;
 						text-transform: uppercase;
-						font-size: rem-calc(35);
-						line-height: 1.257;						
+						font-size: rem-calc(22);
+						line-height: 1.257;					
 						transition: all 0.4s ease;
+						
+						@include breakpoint(medium) {
+							font-size: rem-calc(24);
+						}
+
+						@include breakpoint(tablet) {
+							font-size: rem-calc(28);
+						}
 						
 						img {
 							position: absolute;
-							top: 7px;
-							left: -41px;
+							top: 2px;
+						    left: -24px;
+						    max-width: 13px;
+						    
+						    @media screen and (min-width: 1130px) {
+							    left: -33px;
+							    
+						    }
+						    
 						}
 						
 					}
@@ -127,10 +157,17 @@
 					
 								.img-wrap {
 									height: 100%;
-									background-size: cover;
-									background-position: center center;
 								}
 													
+						}
+						
+					}
+				
+					.text-wrap {
+						padding-top: 10em;
+						
+						@include breakpoint(medium) {
+							padding-top: 0;	
 						}
 						
 					}
@@ -143,9 +180,15 @@
 							top: 0;
 							bottom: 0;
 							left: 0;
-							width: 50vw;
+							right: 0;
+							width: 100%;
 							background-repeat: no-repeat;
 							background-size: cover;
+							background-position: center center;
+							
+							@include breakpoint(medium) {
+								width: 50vw;
+							}
 							
 							@include breakpoint(max) {
 								width: 804px;
@@ -163,26 +206,35 @@
 				position: absolute;
 				left: 0;
 				right: 0;
-				bottom: 60px;
+				bottom: 20px;
+				
+				@include breakpoint(medium) {
+					bottom: 60px;
+				}
+				
+				img {
+					max-width: 69px;
+				}
+				
 			}
 	
 		}
 	}
 	
 	.blog-slider {
-		padding-top: 11.6em;
+		padding-top: 9.28em;
 
 		a {
 			color: $black;
 		}
 		
 		h3 {
-			font-size: rem-calc(28);
+			font-size: rem-calc(22.4);
 			line-height: 1.15;
-			margin-bottom: 0.9em;
+			margin-bottom: 0.72em;
 			
 			@include breakpoint(medium) {
-				font-size: rem-calc(45);
+				font-size: rem-calc(36);
 			}
 
 		}
@@ -191,6 +243,10 @@
 			position: absolute;
 			z-index: 1;
 			top: 57%;
+			
+			img {
+				max-width: 19px;
+			}
 			
 			&.slick-prev {
 				left: -0.935rem;
