--- a/assets/styles/scss/_blog.scss
+++ b/assets/styles/scss/_blog.scss
@@ -36,9 +36,15 @@
 		}
 	
 		h2 {
+			margin-bottom: 0;
 			a {
 				color: $black;
 			}
+			
+		}
+		
+		.date {
+			font-weight: bold;
 		}
 	
 	}
