--- a/assets/styles/scss/_careers.scss
+++ b/assets/styles/scss/_careers.scss
@@ -207,15 +207,15 @@
 	section.team {
 		max-width: 1680px;
 		margin: auto;
-		padding-top: 5.8em;
+		padding-top: 3.2em;
 		
 		@include breakpoint(medium) {
-			padding-top: 9.08em;
+			padding-top: 4.2em;
 		}
 		
 		h2 {
 			margin: 0;
-			padding-bottom: 1.584em;
+			padding-bottom: 2em;
 			
 			@media screen and (max-width: 400px) {
 				font-size: rem-calc(16);
@@ -270,6 +270,10 @@
 				
 			}
 		}
+	}
+	
+	.footer {
+		margin-top: 0;
 	}
 	
 }
