--- a/assets/styles/scss/_grid-rows.scss
+++ b/assets/styles/scss/_grid-rows.scss
@@ -43,6 +43,7 @@
 		
 		.img-wrap {
 			background-size: cover;
+			background-position: 50%;
 			height: 133vw;
 			
 			@include breakpoint(medium) {
