--- a/assets/styles/scss/_home.scss
+++ b/assets/styles/scss/_home.scss
@@ -49,6 +49,7 @@
 		}
 		
 		.ssr-wrap {
+			position: relative;
 			@include breakpoint(small down) {
 				position: relative;
 				height: 250px;
@@ -88,6 +89,7 @@
 				background-size: cover;
 				background-position: center center;
 				
+/*
 				@include breakpoint(medium) {
 					width: 50vw;
 				}
@@ -95,6 +97,7 @@
 				@include breakpoint(max) {
 					width: 804px;
 				}
+*/
 				
 			}
 		
@@ -109,6 +112,7 @@
 			height: 100%;
 
 			.grid-x {
+				position: relative;
 				height: 100%;
 			
 				h2 {
