--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -32,7 +32,7 @@ CSS file.
 @include foundation-typography;
 @include foundation-forms;
 @include foundation-button;
-@include foundation-accordion;
+// @include foundation-accordion;
 @include foundation-accordion-menu;
 // @include foundation-badge;
 // @include foundation-breadcrumbs;
