Blog slider on Careers page

--- a/assets/styles/scss/_careers.scss
+++ b/assets/styles/scss/_careers.scss
@@ -234,6 +234,11 @@
 		
 	}
 	
+	.blog-slider {
+		padding-top: 3em;
+		padding-bottom: 6rem;
+	}
+	
 	section.team {
 		max-width: 1680px;
 		margin: auto;
