--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -161,6 +161,63 @@ section.cc-copy {
 	}
 }
 
+.blog-slider {
+	.slick-track {
+		display: flex;
+		align-items: flex-end;
+	}	
+	.single-blog {
+
+		a {
+			color: $black;
+			
+			.title-wrap {
+				display: flex;
+				align-items: flex-end;
+				margin-bottom: 1.625em;
+				
+				h3 {
+					font-size: rem-calc(22.4);
+					line-height: 1.15;
+					margin-bottom: 0;
+					
+					@include breakpoint(medium) {
+						font-size: rem-calc(36);
+					}
+		
+				}
+				
+				.date {
+					font-weight: bold;	
+				}
+			
+			}
+		
+		}
+	
+	}
+	
+	.slick-arrow {
+		position: absolute;
+		z-index: 1;
+		top: 57%;
+		
+		img {
+			max-width: 19px;
+		}
+		
+		&.slick-prev {
+			left: -0.935rem;
+		}
+
+		&.slick-next {
+			right: -0.935rem;
+		}
+		
+	}
+	
+}
+
 .learn-more {
 	color: $black;
 	font-family: $header-font-family;
